# jamvm-1.0

./: CMakeLists.txt  README.md  alloc.c  alloc.h  class.c  dll.c  excep.c  execute.c  frame.h  interp.c  jam.c  jam.h  jni.c  lock.c  lock.h  natives.c  reflect.c  resolve.c  string.c  thread.c
i386/: dll_md.c
lib/: Makefile  Makefile.am  Makefile.in  copy-vmresources.sh  gen-classlist.sh
